[gd_scene load_steps=135 format=3 uid="uid://crhn3db0b5ere"]

[ext_resource type="Script" uid="uid://d1kt10huw3g4f" path="res://Scripts/Enemy.gd" id="1_1exfc"]
[ext_resource type="Texture2D" uid="uid://bj4ijqr807wdr" path="res://Assets/Vampires1_Attack_full.png" id="1_8i6h2"]
[ext_resource type="Texture2D" uid="uid://xro42isam44e" path="res://Assets/Vampires1_Idle_full.png" id="1_geqcb"]
[ext_resource type="Texture2D" uid="uid://dullvx2hf2xs5" path="res://Assets/Vampires1_Run_full.png" id="3_oheyl"]
[ext_resource type="Texture2D" uid="uid://bfi005b8o8v8l" path="res://Assets/Vampires1_Walk_full.png" id="4_6q7bd"]
[ext_resource type="Script" uid="uid://d16orxuafiep4" path="res://Scripts/StateMachine.gd" id="6_mo1ky"]
[ext_resource type="Script" uid="uid://bhun7gaqk6k6h" path="res://Scripts/states/Idle.gd" id="7_0o0ue"]
[ext_resource type="Script" uid="uid://dvdym3mohnaav" path="res://Scripts/states/Patrol.gd" id="8_6s1gy"]
[ext_resource type="Script" uid="uid://15mfmbo7komt" path="res://Scripts/states/Chase.gd" id="9_uihya"]
[ext_resource type="Script" uid="uid://chlhlfty0d2e0" path="res://Scripts/states/Attack.gd" id="10_27ry8"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1exfc"]
radius = 4.0

[sub_resource type="AtlasTexture" id="AtlasTexture_05dvi"]
atlas = ExtResource("1_8i6h2")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pv3sh"]
atlas = ExtResource("1_8i6h2")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rlakh"]
atlas = ExtResource("1_8i6h2")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rqwgo"]
atlas = ExtResource("1_8i6h2")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_aoyof"]
atlas = ExtResource("1_8i6h2")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3vng1"]
atlas = ExtResource("1_8i6h2")
region = Rect2(320, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kbqv7"]
atlas = ExtResource("1_8i6h2")
region = Rect2(384, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cyxu4"]
atlas = ExtResource("1_8i6h2")
region = Rect2(448, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_woyyg"]
atlas = ExtResource("1_8i6h2")
region = Rect2(512, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_svai0"]
atlas = ExtResource("1_8i6h2")
region = Rect2(576, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_03d58"]
atlas = ExtResource("1_8i6h2")
region = Rect2(640, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_soawc"]
atlas = ExtResource("1_8i6h2")
region = Rect2(704, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tcuu6"]
atlas = ExtResource("1_8i6h2")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_06pbs"]
atlas = ExtResource("1_8i6h2")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6d8l4"]
atlas = ExtResource("1_8i6h2")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4oqy3"]
atlas = ExtResource("1_8i6h2")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_03sxl"]
atlas = ExtResource("1_8i6h2")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kjgx1"]
atlas = ExtResource("1_8i6h2")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vb5a8"]
atlas = ExtResource("1_8i6h2")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xoc1u"]
atlas = ExtResource("1_8i6h2")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sjhjb"]
atlas = ExtResource("1_8i6h2")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5od65"]
atlas = ExtResource("1_8i6h2")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fvwge"]
atlas = ExtResource("1_8i6h2")
region = Rect2(640, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tbarl"]
atlas = ExtResource("1_8i6h2")
region = Rect2(704, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fyncm"]
atlas = ExtResource("1_8i6h2")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y7afc"]
atlas = ExtResource("1_8i6h2")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ssmvw"]
atlas = ExtResource("1_8i6h2")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hss05"]
atlas = ExtResource("1_8i6h2")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8mss6"]
atlas = ExtResource("1_8i6h2")
region = Rect2(256, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_alj8k"]
atlas = ExtResource("1_8i6h2")
region = Rect2(320, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v3g4m"]
atlas = ExtResource("1_8i6h2")
region = Rect2(384, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pttk5"]
atlas = ExtResource("1_8i6h2")
region = Rect2(448, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d3qtf"]
atlas = ExtResource("1_8i6h2")
region = Rect2(512, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mfn1r"]
atlas = ExtResource("1_8i6h2")
region = Rect2(576, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1lhpl"]
atlas = ExtResource("1_8i6h2")
region = Rect2(640, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g2c3x"]
atlas = ExtResource("1_8i6h2")
region = Rect2(704, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_27lnd"]
atlas = ExtResource("1_8i6h2")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fod3r"]
atlas = ExtResource("1_8i6h2")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_riptr"]
atlas = ExtResource("1_8i6h2")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ucmpb"]
atlas = ExtResource("1_8i6h2")
region = Rect2(192, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sumk0"]
atlas = ExtResource("1_8i6h2")
region = Rect2(256, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_etfsa"]
atlas = ExtResource("1_8i6h2")
region = Rect2(320, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_inqvm"]
atlas = ExtResource("1_8i6h2")
region = Rect2(384, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vuqxk"]
atlas = ExtResource("1_8i6h2")
region = Rect2(448, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ojeiv"]
atlas = ExtResource("1_8i6h2")
region = Rect2(512, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jpmdf"]
atlas = ExtResource("1_8i6h2")
region = Rect2(576, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1b3t"]
atlas = ExtResource("1_8i6h2")
region = Rect2(640, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_iwtmh"]
atlas = ExtResource("1_8i6h2")
region = Rect2(704, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3itmh"]
atlas = ExtResource("1_geqcb")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rn2wp"]
atlas = ExtResource("1_geqcb")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8i6h2"]
atlas = ExtResource("1_geqcb")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oheyl"]
atlas = ExtResource("1_geqcb")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6q7bd"]
atlas = ExtResource("1_geqcb")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_etp4d"]
atlas = ExtResource("1_geqcb")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_omgop"]
atlas = ExtResource("1_geqcb")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3lqau"]
atlas = ExtResource("1_geqcb")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_suw4s"]
atlas = ExtResource("1_geqcb")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xowq6"]
atlas = ExtResource("1_geqcb")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qfgf7"]
atlas = ExtResource("1_geqcb")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nypvb"]
atlas = ExtResource("1_geqcb")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b7ogs"]
atlas = ExtResource("1_geqcb")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gj8e7"]
atlas = ExtResource("1_geqcb")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4h8ii"]
atlas = ExtResource("1_geqcb")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j3pot"]
atlas = ExtResource("1_geqcb")
region = Rect2(192, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u2465"]
atlas = ExtResource("3_oheyl")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oqgvo"]
atlas = ExtResource("3_oheyl")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4d5ac"]
atlas = ExtResource("3_oheyl")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kpsy0"]
atlas = ExtResource("3_oheyl")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_niwj1"]
atlas = ExtResource("3_oheyl")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nnksm"]
atlas = ExtResource("3_oheyl")
region = Rect2(320, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_c6rhj"]
atlas = ExtResource("3_oheyl")
region = Rect2(384, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_upmg1"]
atlas = ExtResource("3_oheyl")
region = Rect2(448, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_inqqc"]
atlas = ExtResource("3_oheyl")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_si75v"]
atlas = ExtResource("3_oheyl")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_smg5h"]
atlas = ExtResource("3_oheyl")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_crxyo"]
atlas = ExtResource("3_oheyl")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3kvqj"]
atlas = ExtResource("3_oheyl")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5qca2"]
atlas = ExtResource("3_oheyl")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rgnbu"]
atlas = ExtResource("3_oheyl")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y603w"]
atlas = ExtResource("3_oheyl")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u0pvs"]
atlas = ExtResource("3_oheyl")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ybws"]
atlas = ExtResource("3_oheyl")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7gwo5"]
atlas = ExtResource("3_oheyl")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6mxeh"]
atlas = ExtResource("3_oheyl")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2unav"]
atlas = ExtResource("3_oheyl")
region = Rect2(256, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qbalu"]
atlas = ExtResource("3_oheyl")
region = Rect2(320, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kcjsg"]
atlas = ExtResource("3_oheyl")
region = Rect2(384, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_er3lo"]
atlas = ExtResource("3_oheyl")
region = Rect2(448, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nqmt1"]
atlas = ExtResource("3_oheyl")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3duf0"]
atlas = ExtResource("3_oheyl")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4blrn"]
atlas = ExtResource("3_oheyl")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xc4df"]
atlas = ExtResource("3_oheyl")
region = Rect2(192, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8eq6w"]
atlas = ExtResource("3_oheyl")
region = Rect2(256, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_shbgw"]
atlas = ExtResource("3_oheyl")
region = Rect2(320, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7x5ah"]
atlas = ExtResource("3_oheyl")
region = Rect2(384, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xj6vq"]
atlas = ExtResource("3_oheyl")
region = Rect2(448, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gkpqn"]
atlas = ExtResource("4_6q7bd")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8t7e5"]
atlas = ExtResource("4_6q7bd")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f4pwa"]
atlas = ExtResource("4_6q7bd")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qnqji"]
atlas = ExtResource("4_6q7bd")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8qq60"]
atlas = ExtResource("4_6q7bd")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3yv83"]
atlas = ExtResource("4_6q7bd")
region = Rect2(320, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4c43v"]
atlas = ExtResource("4_6q7bd")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cl25c"]
atlas = ExtResource("4_6q7bd")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bcht8"]
atlas = ExtResource("4_6q7bd")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tyb5m"]
atlas = ExtResource("4_6q7bd")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xexha"]
atlas = ExtResource("4_6q7bd")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y1ah7"]
atlas = ExtResource("4_6q7bd")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_w4dga"]
atlas = ExtResource("4_6q7bd")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bn73v"]
atlas = ExtResource("4_6q7bd")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lamrg"]
atlas = ExtResource("4_6q7bd")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_aiyi4"]
atlas = ExtResource("4_6q7bd")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wl0ah"]
atlas = ExtResource("4_6q7bd")
region = Rect2(256, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yfvan"]
atlas = ExtResource("4_6q7bd")
region = Rect2(320, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_anamb"]
atlas = ExtResource("4_6q7bd")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qufq7"]
atlas = ExtResource("4_6q7bd")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j68ui"]
atlas = ExtResource("4_6q7bd")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_du0mp"]
atlas = ExtResource("4_6q7bd")
region = Rect2(192, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7d5pp"]
atlas = ExtResource("4_6q7bd")
region = Rect2(256, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ixo5"]
atlas = ExtResource("4_6q7bd")
region = Rect2(320, 192, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_05dvi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_05dvi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pv3sh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rlakh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rqwgo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aoyof")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3vng1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kbqv7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cyxu4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_woyyg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_svai0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_03d58")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_soawc")
}],
"loop": true,
"name": &"Attack_back",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tcuu6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_06pbs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6d8l4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4oqy3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_03sxl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kjgx1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vb5a8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xoc1u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sjhjb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5od65")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fvwge")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tbarl")
}],
"loop": true,
"name": &"Attack_front",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fyncm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y7afc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ssmvw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hss05")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8mss6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_alj8k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v3g4m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pttk5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d3qtf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mfn1r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1lhpl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2c3x")
}],
"loop": true,
"name": &"Attack_left",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_27lnd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fod3r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_riptr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ucmpb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sumk0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_etfsa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_inqvm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vuqxk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ojeiv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jpmdf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1b3t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iwtmh")
}],
"loop": true,
"name": &"Attack_right",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3itmh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rn2wp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8i6h2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oheyl")
}],
"loop": true,
"name": &"idle_back",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6q7bd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_etp4d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_omgop")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3lqau")
}],
"loop": true,
"name": &"idle_front",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_suw4s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xowq6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qfgf7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nypvb")
}],
"loop": true,
"name": &"idle_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b7ogs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gj8e7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4h8ii")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j3pot")
}],
"loop": true,
"name": &"idle_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u2465")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oqgvo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4d5ac")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kpsy0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_niwj1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nnksm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c6rhj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_upmg1")
}],
"loop": true,
"name": &"run_back",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_inqqc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_si75v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_smg5h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_crxyo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3kvqj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5qca2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rgnbu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y603w")
}],
"loop": true,
"name": &"run_front",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u0pvs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ybws")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7gwo5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6mxeh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2unav")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qbalu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kcjsg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_er3lo")
}],
"loop": true,
"name": &"run_left",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nqmt1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3duf0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4blrn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xc4df")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8eq6w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_shbgw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7x5ah")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xj6vq")
}],
"loop": true,
"name": &"run_right",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gkpqn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8t7e5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f4pwa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qnqji")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8qq60")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3yv83")
}],
"loop": true,
"name": &"walk_back",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4c43v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cl25c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bcht8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tyb5m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xexha")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y1ah7")
}],
"loop": true,
"name": &"walk_front",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w4dga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bn73v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lamrg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aiyi4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wl0ah")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yfvan")
}],
"loop": true,
"name": &"walk_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_anamb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qufq7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j68ui")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_du0mp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7d5pp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ixo5")
}],
"loop": true,
"name": &"walk_right",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_bcy6v"]
radius = 25.0711

[sub_resource type="CircleShape2D" id="CircleShape2D_6bs3c"]
radius = 15.0

[node name="Enemy" type="CharacterBody2D" groups=["Enemy"]]
position = Vector2(32, 32)
scale = Vector2(0.8, 0.8)
collision_layer = 18
collision_mask = 5
script = ExtResource("1_1exfc")
move_speed = 20.0
chase_speed = 25.0
patrol_wait_time = 5.0
patrol_range = 100.0
attack_cooldown = 3.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 3.75)
shape = SubResource("CircleShape2D_1exfc")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_05dvi")
animation = &"idle_front"
frame_progress = 0.599005

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 10.0
path_postprocessing = 1
avoidance_enabled = true
debug_enabled = true
debug_use_custom = true
debug_path_custom_color = Color(1, 1, 0, 1)

[node name="PatrolTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="RayCast2D" type="RayCast2D" parent="."]
collide_with_areas = true

[node name="PlayerDetection" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
position = Vector2(-1, 4)
shape = SubResource("CircleShape2D_bcy6v")

[node name="AttackRange" type="Area2D" parent="."]
collision_layer = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange"]
shape = SubResource("CircleShape2D_6bs3c")

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("6_mo1ky")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("7_0o0ue")

[node name="Patrol" type="Node" parent="StateMachine"]
script = ExtResource("8_6s1gy")

[node name="Chase" type="Node" parent="StateMachine"]
script = ExtResource("9_uihya")

[node name="Attack" type="Node" parent="StateMachine"]
script = ExtResource("10_27ry8")

[connection signal="body_entered" from="PlayerDetection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_player_detection_body_exited"]
[connection signal="body_entered" from="AttackRange" to="." method="_on_attack_range_body_entered"]
[connection signal="body_exited" from="AttackRange" to="." method="_on_attack_range_body_exited"]
